# LR8

All_Tasks/: CMakeLists.txt  LR8.cpp  func_task1.cpp  func_task2.cpp  functions_1.h  functions_2.h  test  test.cpp
Task_1/: functions.cpp  functions_1.h  howTODO.txt
